Cambio de mi situación actual

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
           <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
           <div class="hero-text">
             <h1><span>Holaaaa :)!! soy</span><br />Nuria Balderas Leyva.</h1>
-            <h3>Profesor de informática de Cartagena</h3>
+            <h3>
+              Soy alumna del primer curso del ciclo superior de Desarrollo de
+              Aplicaciones Multiplataforma
+            </h3>
             <a
               href="https://www.youtube.com/watch?v=L5sw9ITJORY&ab_channel=QuocMinh"
               class="btn btn-lg btn-info"
