--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 /></a>
               </li>
               <li>
-                <a href="https://github.com/zoniak?tab=repositories"
+                <a href="https://github.com/Nuriabl13?tab=repositories"
                   ><img src="assets/github.png"
                 /></a>
               </li>
