Cambio correo de contacto

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </li>
               <!-- <li><a href="#">About</a></li> -->
               <li>
-                <a href="mailto:angelgarciacaparros@gmail.com">Contacto</a>
+                <a href="mailto:nuria13balderas2l@gmail.com">Contacto</a>
               </li>
             </ul>
           </nav>
