Modifico el nombre del footer

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="container-fluid">
         <div class="row footer">
           <div class="col-md-12 text-center">
-            <h1>Ángel<br /><span>García</span></h1>
+            <h1>Nuria<br /><span>Balderas</span></h1>
             <ul class="social-links">
               <li>
                 <a href="https://www.linkedin.com/in/angelgarciacaparros/"
@@ -144,7 +144,7 @@
                 /></a>
               </li>
               <li>
-                <a href="https://github.com/zoniak?tab=repositories"
+                <a href="https://github.com/Nuriabl13?tab=repositories"
                   ><img src="assets/github.png"
                 /></a>
               </li>
