Cambios de datos personales

--- a/index.html
+++ b/index.html
@@ -62,12 +62,6 @@
             >
             <ul class="social-links">
               <li class="label">Encuentrame aqui :)</li>
-
-              <li>
-                <a href="https://www.linkedin.com/in/angelgarciacaparros/"
-                  ><img src="assets/linkedin.png"
-                /></a>
-              </li>
               <li>
                 <a href="https://github.com/Nuriabl13?tab=repositories"
                   ><img src="assets/github.png"
@@ -86,7 +80,7 @@
           <div class="col-md-12">
             <h4 class="sub-heading">Conoce</h4>
             <h1 class="heading purple">
-              <span class="purple">mi</span> experiencia <br />trabajando en el
+              <span class="purple">Mi</span> experiencia <br />estudiando en el
               sector
             </h1>
             <!-- Swiper -->
@@ -95,31 +89,18 @@
                 <div class="swiper-slide client-box">
                   <img src="assets/logo-2.png" class="client-logo" />
                   <h3 class="text-left title">
-                    Profesor de Grado Superior de Desarrollo Web y
+                    Estudiante del ciclo superior de Desarrollo de Aplicaciones
                     Multiplataforma
                   </h3>
                   <p class="text-left tag">IES Hermenegildo Lanz, Granada</p>
                 </div>
                 <div class="swiper-slide client-box">
-                  <img src="assets/logo-1.png" class="client-logo" />
+                  <img src="assets/ies_padre_suarez.png" class="client-logo" />
                   <h3 class="text-left title">
-                    Personal Docente Investigador de la UGR
+                    Estudiante del ciclo medio de Sistemas Microinformáticos y
+                    Redes
                   </h3>
-                  <p class="text-left tag">Universidad de Granada, Granada</p>
-                </div>
-                <div class="swiper-slide client-box">
-                  <img src="assets/logo-3.png" class="client-logo" />
-                  <h3 class="text-left title">
-                    Profesor de Grado Medio y Superior de Informática
-                  </h3>
-                  <p class="text-left tag">Atlantida, Granada</p>
-                </div>
-                <div class="swiper-slide client-box">
-                  <img src="assets/logo-2.png" class="client-logo" />
-                  <h3 class="text-left title">
-                    Practicas de profesor de Informática
-                  </h3>
-                  <p class="text-left tag">IES Soto de Rojas, Granada</p>
+                  <p class="text-left tag">IES Padre Suárez, Granada</p>
                 </div>
               </div>
             </div>
@@ -139,7 +120,7 @@
             <h1>Nuria<br /><span>Balderas</span></h1>
             <ul class="social-links">
               <li>
-                <a href="https://www.linkedin.com/in/angelgarciacaparros/"
+                <a href="https://www.linkedin.com"
                   ><img src="assets/linkedin.png"
                 /></a>
               </li>
